templates/gcloud-sqlproxy_template.yaml
---
# Source: gcloud-sqlproxy/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: "release-name-gcloud-sqlproxy"
  labels:
    helm.sh/chart: gcloud-sqlproxy-0.20.5
    app.kubernetes.io/name: gcloud-sqlproxy
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16"
    app.kubernetes.io/managed-by: Helm
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: gcloud-sqlproxy
      app.kubernetes.io/instance: release-name
  ingress:
    # Allow inbound connections
    - ports:
      - port: 5432
      from:
          []
---
# Source: gcloud-sqlproxy/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-gcloud-sqlproxy
  annotations:
  labels:
    helm.sh/chart: gcloud-sqlproxy-0.20.5
    app.kubernetes.io/name: gcloud-sqlproxy
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
  - name: instance
    protocol: TCP
    port: 5432
    targetPort: instance
  selector:
    app.kubernetes.io/name: gcloud-sqlproxy
    app.kubernetes.io/instance: release-name
